Fix git rebase command in index.mdx to use the correct flag for branch deletion

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -96,6 +96,6 @@ git branch -D branch-name
 ```
 
 ```bash
-git rebase --no-ff branch-name
+git rebase -D branch-name
 git branch -D branch-name
 ```
