--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -18,7 +18,7 @@ To learn more about git, check out the following resources:
 - [How to show, create, renaming and deleting branches](#how-to-show-create-renaming-and-deleting-branches)
 - [How to rename the last commit](#how-to-rename-the-last-commit)
 - [How to a branch and switch to it](#how-to-a-branch-and-switch-to-it)
-- [How to merge/rebase and delete the branch](#how-to-mergerebase-and-delete-the-branch)
+- [How to merge/rebase and delete the current branch](#how-to-mergerebase-and-delete-the-current-branch)
 
 ## How to back the last commit
 
